# libfacedetection

example/: CMakeLists.txt  README.md  benchmark.cpp  fd_for_image_list.cpp  libfacedetect-example.cpp  video_fd.cpp
